# Leibniz-formula-benchmark

./: .gitignore  Cargo.toml  README.md
BQN/: flake.nix  pi.bqn  ppi.bqn
Julia/: leibniz.jl
Python/: flake.nix  pi.py
Rust/: Cargo.toml
Rust/benches/: benchmark.rs
Rust/src/: main.rs
Swift/: Package.swift
Swift/Sources/: main.swift
Uiua/: .envrc  flake.nix  pi.ua  pi.uasm  ppi.ua  ppi.uasm
benches/: benchmark.rs
src/: main.rs
