[package]
name = "pi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
rayon = "1.6"
rug = "1.19"

[features]
default = ["float"]
float = []

[[bench]]
name = "benchmark"
harness = false
