[package]
name = "pi-rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "^0.4"
rayon = { version = "^1.7", optional = true }

[features]
default = []
parallel = ["rayon"]

[[bench]]
name = "benchmark"
harness = false
